# firmware-otaq-esp8266

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
.github/workflows/: build-ota.yml
components/cjson/: CMakeLists.txt
components/dht/: CMakeLists.txt  DHT22.c  DHT22.h
components/miniz/: CMakeLists.txt
components/monocypher/: CMakeLists.txt  monocypher-ed25519.h  monocypher.h
main/: CMakeLists.txt  ina219.c  ina219.h  main.c  mqtt_app.c  mqtt_app.h  ntp.c  ntp.h  ota_control.c  ota_control.h  ota_updater.c  ota_updater.h  sensor_task.c  sensor_task.h  wifi_connect.c
main/certs/: fullchain.c  fullchain.h  isrgrootx1.h  pub_ecdsa.h
